intermediate commit; adding total elapsed time @ bottom by stop button; alignment is bad

--- a/html/css/recipe.css
+++ b/html/css/recipe.css
@@ -225,6 +225,10 @@ a:hover {
     visibility: hidden;
 }
 
+.total-elapsed {
+    float: right;
+}
+
 .bs-footer {
     padding-top: 80px;
     padding-bottom: 80px;
